samples/_failures_safe/1761333717_cc9f06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7b876c0.c: In function ‘main’:
./samples/SAFE/__tmp_a7b876c0.c:176:25: error: expected ‘;’ at end of input
  176 |         print_token_type
      |                         ^
      |                         ;
./samples/SAFE/__tmp_a7b876c0.c:176:9: error: expected declaration or statement at end of input
  176 |         print_token_type
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a7b876c0.c:176:9: error: expected declaration or statement at end of input
